solucionado los listener de los filtros